--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<html>
-<head></head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Hello world</title>
+</head>
   <body>Hello world</body>
 </html>
