--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
     <header>
       <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-          <span class="fs-4">Hello world/span>
+          <span class="fs-4">Hello world</span>
         </a>
   
         <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-          <a class="me-3 py-2 text-dark text-decoration-none" href="#">Features</a>
-          <a class="me-3 py-2 text-dark text-decoration-none" href="#">Enterprise</a>
-          <a class="me-3 py-2 text-dark text-decoration-none" href="#">Support</a>
-          <a class="py-2 text-dark text-decoration-none" href="#">Pricing</a>
+          <a class="me-3 py-2 text-dark text-decoration-none" href="#">Menu 1</a>
+          <a class="me-3 py-2 text-dark text-decoration-none" href="#">Menu 2</a>
+          <a class="me-3 py-2 text-dark text-decoration-none" href="#">Menu 3</a>
         </nav>
       </div>
     </header>
